--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "image-webpack-loader": "^1.6.2",
     "nodemon": "~1.3.7",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.9"
   },
   "repository": {
