added tests and verified inventory

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,10 @@
     "Snap": true,
     "Paper": true,
     "Delaunay": true,
-    "TimelineLite": true
+    "TimelineLite": true,
+    "it": true,
+    "describe": true,
+    "after": true
   },
   "rules": {
     // Disallow using variables outside the blocks they are defined (especially
@@ -76,7 +79,7 @@
     // Maximum length of a line.
     "max-len": [1, 120],
     // Maximum depth callbacks can be nested.
-    "max-nested-callbacks": [2, 3],
+    "max-nested-callbacks": [2, 4],
     // Don't limit the number of parameters that can be used in a function.
     "max-params": 0,
     // Don't limit the maximum number of statement allowed in a function. We
