--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "scripts": {
     "start": "nodemon",
     "build": "webpack -p --progress",
-    "dev": "webpack --progress --color --watch & nodemon"
+    "dev": "webpack --progress --color --watch & nodemon",
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha"
   },
   "dependencies": {
     "bcrypt": "^0.8.5",
-    "boom": "~2.6.1",
+    "boom": "^2.6.1",
     "concat-stream": "~1.4.7",
     "cookie": "^0.2.3",
     "crumb": "^4.0.4",
@@ -46,7 +47,10 @@
     "css-loader": "^0.23.0",
     "file-loader": "^0.8.5",
     "image-webpack-loader": "^1.6.2",
+    "mocha": "^2.3.4",
+    "nock": "^3.4.0",
     "nodemon": "~1.3.7",
+    "should": "^7.1.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9"
