--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "path": "^0.12.7",
     "postmark": "~1.0.0",
     "request": "~2.53.0",
+    "scooter": "^2.0.1",
     "socket.io": "^1.3.7",
+    "statehood": "^3.0.0",
     "touch": "^1.0.0",
     "uuid": "~2.0.1",
     "vision": "^4.0.0",
